--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "cff-bbox-polys",
-  "version": "0.0.0",
-  "description": "CDP Frontend Template",
+  "version": "1.0.0",
+  "description": "Bing Maps bounding box and polygon intersection checker",
   "sideEffects": false,
   "main": "src/index.js",
-  "type": "module",
   "engines": {
     "node": ">=22.16.0"
   },
@@ -14,7 +13,11 @@
     "dev:debug": "run-p frontend:watch server:debug",
     "docker:dev": "npm run dev",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js}\"",
-    "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js}\"",
+    "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,test.js}\" --ignore-path .prettierignore",
+    "format:fix:js": "prettier --parser babel --write \"src/**/*.js\" \"**/*.{js,cjs,test.js}\" --ignore-path .prettierignore",
+    "format:fix:json": "prettier --parser json --write \"**/*.json\" --ignore-path .prettierignore",
+    "format:fix:md": "prettier --parser markdown --write \"**/*.md\" --ignore-path .prettierignore",
+    "format:fix": "npm run format:fix:js && npm run format:fix:json && npm run format:fix:md",
     "frontend:watch": "NODE_ENV=development webpack --watch",
     "git:pre-commit-hook": "npm run format:check && npm run lint && npm test",
     "postinstall": "npm run setup:husky",
@@ -23,7 +26,7 @@
     "lint:js:fix": "eslint . --fix",
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "pretest": "npm run build:frontend",
-    "test": "TZ=UTC vitest run --coverage",
+    "test": "jTZ=UTC vitest run --coverage",
     "test:watch": "TZ=UTC vitest",
     "server:watch": "nodemon --inspect=0.0.0.0 --ext js,json --legacy-watch ./src",
     "server:debug": "nodemon --inspect-brk=0.0.0.0 --ext js,json --legacy-watch ./src",
@@ -52,6 +55,8 @@
     "cssnano": "7.0.7",
     "cssnano-preset-default": "7.0.7",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
     "global-agent": "3.0.0",
     "govuk-frontend": "5.11.0",
     "hapi-pino": "12.1.0",
@@ -75,6 +80,7 @@
     "copy-webpack-plugin": "13.0.0",
     "eslint": "9.31.0",
     "husky": "9.1.7",
+    "jest": "^29.6.1",
     "neostandard": "0.12.1",
     "nodemon": "3.1.10",
     "npm-run-all": "4.1.5",
