Fix production path issue - use async readFile in controller

--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "lint:js:fix": "eslint . --fix",
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "pretest": "npm run build:frontend",
-    "test": "TZ=UTC vitest run --coverage",
-    "test:watch": "TZ=UTC vitest",
+    "test": "REDIS_HOST=127.0.0.1 TZ=UTC vitest run --coverage",
+    "test:watch": "REDIS_HOST=127.0.0.1 TZ=UTC vitest",
     "server:watch": "nodemon --inspect=0.0.0.0 --ext js,json --legacy-watch ./src",
     "server:debug": "nodemon --inspect-brk=0.0.0.0 --ext js,json --legacy-watch ./src",
     "prestart": "npm run build:frontend",
-    "start": "NODE_ENV=production node --use-strict .",
+    "start": "REDIS_HOST=127.0.0.1NODE_ENV=production node --use-strict .",
     "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
   },
   "author": "Defra DDTS",
